# anisovms

./: CMakeLists.txt  README  adapt.cpp  adapt.hpp  config.sh  disc.cpp  disc.hpp  error.cpp  error.hpp  ex1.cpp  ex1_adapt.yaml  lhs.cpp  lhs.hpp  primal.cpp  primal.hpp  rhs.cpp  rhs.hpp  solver.cpp  solver.hpp  sys.cpp  sys.hpp  tau.cpp  tau.hpp
msh/lshape/: Makefile  assoc.txt  lshape  lshape.cpp  lshape.dmg  lshape.geo  lshape.msh  lshape0.smb
